--- a/buildspec.yml
+++ b/buildspec.yml
@@ -47,6 +47,7 @@ phases:
             labels:
               app: $_PROJECT_NAME
           spec:
+            type: LoadBalancer #추가
             ports:
               - port: 8080
                 targetPort: 8080
